<resources>
    <string name="activiteCree">L\'activité a été créé le</string>
    <string name="ajouter">Ajouter</string>
    <string name="ajouterActivite">Aucune activité à déclarer?</string>
    <string name="ajouterEvent">Programmez d\'autres rencontres</string>
    <string name="ajouterPersonne">Ajouter une personne</string>
    <string name="age_faux">Veuillez entrer votre année de naissance</string>
    <string name="age_minimal">Vous devez avoir 18 ans</string>
    <string name="annuler">Annuler</string>
    <string name="app_name">RunForLove</string>
    <string name="aVenir">Evénements à venir</string>
    <string name="certain">Êtes-vous certain de vouloir supprimer la conversation?</string>
    <string name="champ_vide">Veuillez remplir tous les champs</string>
    <string name="confirmer_mdp">Comfirmer</string>
    <string name="connexion">Connexion</string>
    <string name="conversationExist">Une conversation porte déjà ce nom</string>
    <string name="creer">Créer l\'événement</string>
    <string name="creerDiscussion">Créer</string>
    <string name="creerUneDiscussion">Créer une nouvelle discussion</string>
    <string name="dansVille">Evénements dans ma ville</string>
    <string name="dateEvent">Date de l\'événement</string>
    <string name="datePasValide">Le format de la date est yyyy/MM/dd et elle ne doit pas être dans le futur</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="distance">Distance en km:</string>
    <string name="echec_authentification">Echec de l\'authentification</string>
    <string name="echec_modifierAge">Vous devez plus de 18 ans</string>
    <string name="echec_modifierMDP">Les mots de passe doivent être identiques et non vides</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="etreUn">Vous êtes un</string>
    <string name="eventAEteCrees">L\'événement a bien été créé</string>
    <string name="eventDansVille">Les événements à venir dans ma ville</string>
    <string name="eventExist">Cet événement existe déjà</string>
    <string name="eventMiens">Mes événements</string>
    <string name="eventProchains">Les prochains événements</string>
    <string name="femme">Femme</string>
    <string name="heures">Heures:</string>
    <string name="homme">Homme</string>
    <string name="identifiantsIncorrects">Identifiants incorrects</string>
    <string name="infos">Informations complémentaires</string>
    <string name="inscription">Inscription</string>
    <string name="mdp">Mot de passe</string>
    <string name="mdp_non_identique">Les mots de passe saisis ne sont pas identiques</string>
    <string name="mesActivites">Mes activites</string>
    <string name="mesConversations">Mes conversations</string>
    <string name="mesEvents">Mes événements</string>
    <string name="minutes">Minutes:</string>
    <string name="modifier">Modifier le profil</string>
    <string name="nom">Donner un nom</string>
    <string name="nouvelEvent">+ Ajouter un nouvel événement +</string>
    <string name="nouvelleActivite">+ Ajouter une nouvelle activité+</string>
    <string name="nouvelleConversation">+ Envoyer un message à une nouvelle personne +</string>
    <string name="parcouru">Vous avez parcouru</string>
    <string name="pasActivite">Vous n\'avez pas encore enregistré d\'activité</string>
    <string name="pasDiscussion">Venez parler à de nouvelles personnes</string>
    <string name="pasMiens">Vous n\'avez pas d\'événement en cours</string>
    <string name="pasPersonnalite">Venez découvrir votre personnalité</string>
    <string name="pasProchain">Aucun énévement prochainement</string>
    <string name="pasVille">Aucun énévement prochainement dans votre ville</string>
    <string name="pseudo">Identifiant</string>
    <string name="pseudoDestinnataire">Le destinataire</string>
    <string name="pseudo_utilise">Ce pseudo existe déjà</string>
    <string name="saisir_dateNaissance">Année de naissance</string>
    <string name="saisir_mdp">Mot de passe</string>
    <string name="saisir_pseudo">Pseudonyme</string>
    <string name="same">Un enregistrement porte déjà ce nom</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="slogan">Franchissez de nouvelles lignes</string>
    <string name="supprimer">Supprimer l\'activité</string>
    <string name="supprimerEvent">Supprimer l\'événement</string>
    <string name="utilisateurAjoute">L\'utilisateur a bien été ajouté</string>
    <string name="utilisateurNon">Cet utilisateur n\'existe pas</string>
    <string name="ville">Votre ville</string>
    <string name="villeEvent">Ville de l\'événement</string>
    <string name="bienvenue">Bienvenue parmis nous</string>
    <string name="notifConnexion">Bon retour</string>
    <string name="notifDeco">Au revoir</string>
    <string name="notifModif">Une nouelle identité</string>
    <string name="notifNDiscussion">Une nouvelle discussion avec</string>
    <string name="notifNActivite">Vous avez parcouru</string>
    <string name="notifNEvent">a été créé</string>
    <string name="enfj">Protagoniste</string>
    <string name="description_enfj">Les Protagonistes sont des leaders nés, pleins de passion et de charisme. Ils constituent environ deux pourcent de la population et sont souvent nos politiciens, nos coachs et nos enseignants. Ils tendent la main aux autres et les inspirent pour qu\'ils accomplissent et fassent le bien dans le monde. Avec une confiance naturelle qui génère de l\'influence, les Protagonistes ont beaucoup de fierté et de joie à aider les autres à travailler ensemble pour s\'améliorer et améliorer leur communauté.\n\nLes gens sont attirés par les fortes personnalités et les Protagonistes dégagent authenticité, préoccupation et altruisme. Ils n\'ont pas peur de se lever et de prendre la parole quand ils sentent qu\'il y a une chose qu\'il faut dire. Ils trouvent naturel et facile de communiquer avec les autres, surtout directement, et leur intuition aide les gens de personnalité « Protagoniste » à toucher tous les esprits, que ce soit par l\'intermédiaire des faits et de la logique ou de l\'émotion pure. Les Protagonistes repèrent facilement les motivations des gens et les évènements en apparence déconnectés, et sont capables de rassembler ces idées et de les communiquer en tant que but commun avec une éloquence tout simplement fascinante.\n\nL\'intérêt des Protagonistes pour autrui est authentique, presque à l\'excès : quand ils croient en quelqu\'un, ils peuvent s\'impliquer à l\'excès dans les problèmes de l\'autre personne, leur accorder trop de confiance. Heureusement, cette confiance a tendance à être une prophétie auto réalisatrice, car l\'altruisme et l\'authenticité des Protagonistes pousse ceux dont ils s\'occupent à s\'améliorer. Cependant, s\'ils ne font pas attention, ils peuvent être excessivement optimistes et parfois pousser les autres plus loin qu\'ils ne sont prêts à aller ou qu\'ils ne le désirent.\n\nLes Protagonistes sont aussi vulnérables à un autre piège : ils ont une énorme capacité de réflexion sur et d\'analyse de leurs propres sentiments, mais s\'ils s\'impliquent trop dans la situation critique d\'une autre personne, ils peuvent souffrir d\'une sorte d\'hypocondrie émotionnelle, voir les problèmes des autres chez eux-mêmes, essayer de réparer chez eux-mêmes une chose qui fonctionne bien. S\'ils en arrivent au point où ils sont bloqués par des limites ressenties par quelqu\'un d\'autre, cela peut contrarier la capacité des Protagonistes à voir au-delà du dilemme et à être tout simplement efficace. Quand cela se produit, il est important que les Protagonistes fassent marche arrière et utilisent cette réflexion sur eux-mêmes pour faire la distinction entre ce qu\'ils ressentent vraiment et ce qui constitue un problème séparé qu\'il faut aborder d\'un autre point de vue.\n\nLes gens de personnalité « Protagoniste » sont des altruistes passionnés, parfois même trop, et il est improbable qu\'ils aient peur de prendre les armes pour défendre les gens et les idées en lesquels ils croient. Il n\'y a rien d\'étonnant à ce que beaucoup des Protagonistes célèbres soient Présidents des USA car ce type de personnalité veut montrer la voie vers un avenir plus brillant, que ce soit en menant une nation à la prospérité ou en apportant une victoire âprement disputée à leur petite équipe de championnat de softball.</string>
    <string name="abrege_enfj">Leaders charismatiques et inspirants, capables de fasciner leur public.</string>
    <string name="enfp">Inspirateur</string>
    <string name="description_enfp">La personnalité « Inspirateur » est un véritable esprit libre. Ils sont souvent l\'âme d\'une soirée mais, à la différence des Explorateurs, ils sont moins intéressés par l\'excitation et le plaisir purs du moment présent que par l\'appréciation des connexions sociales et émotionnelles qu\'ils établissent avec autrui. Charmants, indépendants, énergiques et compatissants, les 7 % de la population qu\'ils représentent peuvent certainement se repérer dans n\'importe quelle foule.\n\nCela dit, les Inspirateurs ne sont pas que des séducteurs sociables. Ils ont tendance à considérer la vie comme un grand puzzle complexe où tout est connecté, mais, à la différence des Analystes, qui ont tendance à aborder ce puzzle comme une série de machinations systémiques, les Inspirateurs l\'abordent au travers d\'un prisme émotionnel, compassionnel et mystique, et ils sont toujours à la recherche d\'un sens sous-jacent.\n\nDe nombreux autres types de personnalité sont susceptibles de trouver ces qualités irrésistibles et, s\'ils ont trouvé une cause qui met le feu à leur imagination, les Inspirateurs y consacreront une énergie qui les projettera souvent sous les feux de la rampe, soutenus par leurs collègues comme des leaders et des gourous, mais ce n\'est pas forcément cette position qui attirera les Inspirateurs et leur amour de l\'indépendance. Pire encore, ils peuvent se retrouver sous le coup des tâches administratives et de l\'entretien de routine susceptibles d\'accompagner une position de leadership. L\'estime de soi des Inspirateurs dépend de leur capacité à trouver des solutions originales et ils ont besoin de jouir de la liberté d\'innover, alors que s\'ils se retrouvent piégés dans un rôle ennuyeux, ils peuvent rapidement perdre patience ou se décourager.\n\nHeureusement, les Inspirateurs savent se détendre et l\'idéaliste passionné et motivé du lieu de travail est parfaitement capable de se transformer en un esprit libre, imaginatif et enthousiaste sur la piste de danse, souvent avec une soudaineté qui peut surprendre jusqu\'à ses amis les plus proches. Être dans le coup leur donne aussi une chance d\'entrer en relation émotionnelle avec les autres, de leur fournir des idées précieuses sur ce qui motive leurs amis et leurs collègues. Ils croient que tout le monde devrait prendre le temps de reconnaître et d\'exprimer ses sentiments, et leur empathie et leur sociabilité font de cette conviction un sujet de conversation naturel.</string>
    <string name="abrege_enfp">Esprits libres enthousiastes, créatifs et sociables, qui arrivent toujours à trouver une raison de sourire.</string>
    <string name="entj">Commandant</string>
</resources>