<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/couleurFond"
tools:context=".pages.SplashScreenActivity">



<ImageView
    android:id="@+id/image_icon"
    android:src="@drawable/logo"
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:adjustViewBounds="true"
    android:scaleType="centerInside"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/simonetta_black"
        android:text="@string/app_name"
        android:textColor="@color/couleurAuthentification"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_icon"
        app:layout_constraintLeft_toRightOf="@+id/image_icon" />
<TextView
    android:id="@+id/slogan"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/slogan"
    android:textSize="40dp"
    android:fontFamily="@font/simonetta_black"
    android:textColor="@color/couleurAuthentification"
    android:paddingLeft="20dp"
    android:paddingTop="50dp"
    app:layout_constraintTop_toBottomOf="@+id/nom"
    app:layout_constraintLeft_toLeftOf="parent"
    />

<Button
    android:id="@+id/connexion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/connexion"
    android:textColor="@color/couleur_blanc"
    android:fontFamily="@font/simonetta_black"
    android:textSize="20dp"
    android:background="@drawable/custom_btn1"
    android:layout_marginTop="250dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />

<Button
    android:id="@+id/inscription"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/inscription"
    android:textColor="@color/couleur_blanc"
    android:fontFamily="@font/simonetta_black"
    android:textSize="20dp"
    android:background="@drawable/custom_btn2"
    app:layout_constraintTop_toBottomOf="@+id/connexion"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="25dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
