<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.connexion"
    android:background="@color/couleurFond"
    >

    <ImageView
    android:id="@+id/image_icon"
    android:src="@drawable/logo"
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:adjustViewBounds="true"
    android:scaleType="centerInside"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/simonetta_black"
        android:text="@string/app_name"
        android:textColor="@color/couleurAuthentification"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_icon"
        app:layout_constraintLeft_toRightOf="@+id/image_icon" />

    <EditText
    android:id="@+id/pseudo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/pseudo"
    android:textColorHint="@color/couleur_blanc"
    android:inputType="text"
    android:textColor="@color/couleur_blanc"
    android:fontFamily="@font/simonetta_black"
    android:textSize="30dp"
    android:gravity="center"
    android:background="@drawable/custom_edittext"
    android:layout_marginTop="100dp"
    android:width="200dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mdp"
        android:textColorHint="@color/couleur_blanc"
        android:inputType="textPassword"
        android:textColor="@color/couleur_blanc"
        android:fontFamily="@font/simonetta_black"
        android:textSize="30dp"
        android:gravity="center"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="10dp"
        android:width="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pseudo"
         />

    <Button
        android:id="@+id/validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        android:textColor="@color/couleur_blanc"
        android:fontFamily="@font/simonetta_black"
        android:textSize="20dp"
        android:background="@drawable/custom_btn2"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/mdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>