<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.event"
    android:background="@color/couleurFond">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/exemples_activites"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/bar_activites"
                >
                <Button
                    android:id="@+id/nouvelEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_btn_nouvelleactivite"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/nouvelEvent"
                    android:textColor="@color/toulouse"
                    android:fontFamily="@font/simonetta_black"
                    android:gravity="center"
                    android:textSize="20dp"
                    />
                <Button
                    android:id="@+id/mesEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mesEvents"
                    android:textColor="@color/ic_apropos_background"
                    android:fontFamily="@font/simonetta_black"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_edittext"
                    />
                <Button
                    android:id="@+id/dansVille"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dansVille"
                    android:textColor="@color/ic_apropos_background"
                    android:fontFamily="@font/simonetta_black"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_edittext"
                    />
                <Button
                    android:id="@+id/aVenir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aVenir"
                    android:textColor="@color/ic_apropos_background"
                    android:fontFamily="@font/simonetta_black"
                    android:gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_edittext"
                    />

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/bar_activites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0"
            app:layout_constraintTop_toBottomOf="@id/exemples_activites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/custom_edittext"
            >
            <Button
                android:id="@+id/vers_new_activite"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/ic_activite"
                android:paddingBottom="30dp"
                android:background="@drawable/custom_btn_empty"
                />
            <Button
                android:id="@+id/vers_event"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/ic_event"
                android:paddingBottom="30dp"
                android:background="@drawable/custom_btn_empty"
                />
            <Button
                android:id="@+id/vers_home"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/ic_home"
                android:paddingBottom="30dp"
                android:background="@drawable/custom_btn_empty"
                />
            <Button
                android:id="@+id/vers_discussion"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/ic_discussion"
                android:paddingBottom="30dp"
                android:background="@drawable/custom_btn_empty"
                />
            <Button
                android:id="@+id/vers_profil"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/ic_profil"
                android:paddingBottom="30dp"
                android:background="@drawable/custom_btn_empty"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>